Get files / test results (#6)
* added new endpoint to get results across all test runners
